# brew-control-dash

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: main.yml
brew_control_dash/: app-brew.py  brew_control_client_dash.py
tests/: action.yml  test_brew_control_dash.py
