[tool.poetry]
name = "brew-control-dash"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^1.18.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0","setuptools"]
build-backend = "poetry.core.masonry.api"
